--- a/src/app/main-content/chat/chat.component.html
+++ b/src/app/main-content/chat/chat.component.html
@@ -1,12 +1,13 @@
 <section>
-    <app-chat-header [ngStyle]="messageService.isWriteAMessage ? {'height':'auto'} : {'height':'10%'}"></app-chat-header>
+    <app-chat-header
+        [ngStyle]="messageService.isWriteAMessage ? {'height':'auto'} : {'height':'10%'}"></app-chat-header>
 
     <div class="main-message-container" #messageContainer (scroll)="onScroll()">
 
         @if (!messageService.isWriteAMessage && !messageService.isSearchForMessages) {
         <div *ngIf="!directMessageService.isDirectMessage" class="mesage-container">
             <ng-container *ngIf="isLoading; else messageList">
-                <div class="loader">Laden...</div>
+                <div class="loader">Load ...</div>
             </ng-container>
 
             <ng-template #messageList>
@@ -20,17 +21,18 @@
                     <h2>{{auth.currentChannelData.title}}</h2>
                 </div>
                 <p>{{ checkUserAdmin(auth.currentChannelData.admin)
-                    ? 'Du hast diesen Channel ' + parseTime(auth.currentChannelData.createdAt) + ' erstellt. '
+                    ? 'You have this channel ' + parseTime(auth.currentChannelData.createdAt) + ' created . '
                     : auth.currentChannelData.adminName + ' hat diesen Channel ' +
                     parseTime(auth.currentChannelData.createdAt) + ' erstellt.' }} Das ist der Anfang des Channels
-                    <span># {{auth.currentChannelData.title}}</span></p>
+                    <span># {{auth.currentChannelData.title}}</span>
+                </p>
             </div>
 
         </div>
 
         <div *ngIf="directMessageService.isDirectMessage" class="direct-message-container">
             <ng-container *ngIf="isLoading; else messageList">
-                <div class="loader">Laden...</div>
+                <div class="loader">Load...</div>
             </ng-container>
 
             <ng-template #messageList>
@@ -46,42 +48,43 @@
                     <h2>{{directMessageService.directMessageUserData.name}}</h2>
                 </div>
                 <div *ngIf="isUserDirectMessage()">
-                    <p><b>Dieser Raum ist nur für dich da.</b> Mache dir Notizen, liste deine To-dos auf oder bewahre
-                        Links und Dateien griffbereit auf. Du kannst hier auch gerne Dinge mit dir selbst besprechen.
+                    <p><b>This room is just for you.</b> Take notes, list your to-dos, or keep links and files handy.
+                        You can also feel free to discuss things with yourself here.
                     </p>
                 </div>
                 <div *ngIf="isUserDirectMessage() == false">
-                    <p>Diese Unterhaltung findet nur zwischen
-                        <span>&#64;{{directMessageService.directMessageUserData.name}}</span> und dir statt</p>
+                    <p>This conversation takes place only between
+                        <span>&#64;{{directMessageService.directMessageUserData.name}}</span> and yourself.
+                    </p>
                 </div>
             </div>
 
         </div>
         } @else if (messageService.isWriteAMessage && !messageService.isSearchForMessages){
-    @if(auth.infoBannerIsSubmit){
-    <app-info-banner class="info-banner" [text]=auth.infoBannertext [icon]=auth.infoBannerIcon></app-info-banner>
-    }
+        @if(auth.infoBannerIsSubmit){
+        <app-info-banner class="info-banner" [text]=auth.infoBannertext [icon]=auth.infoBannerIcon></app-info-banner>
+        }
         } @else if (messageService.isSearchForMessages){
-            <div *ngIf="!directMessageService.isDirectMessage" class="mesage-container">
-                <ng-container *ngIf="isLoading; else messageList">
-                    <div class="loader">Laden...</div>
-                </ng-container>
-                <ng-template #messageList>
-                    <app-message *ngFor="let msg of message; index as i" [message]="msg" [index]="i">
-                    </app-message>
-                </ng-template>
-            </div>
-    
-            <div *ngIf="directMessageService.isDirectMessage" class="direct-message-container">
-                <ng-container *ngIf="isLoading; else messageList">
-                    <div class="loader">Laden...</div>
-                </ng-container>
-                <ng-template #messageList>
-                    <app-message *ngFor="let msg of directMessageService.allDirectMessages; index as i" [message]="msg"
-                        [index]="i">
-                    </app-message>
-                </ng-template>
-            </div>
+        <div *ngIf="!directMessageService.isDirectMessage" class="mesage-container">
+            <ng-container *ngIf="isLoading; else messageList">
+                <div class="loader">Load...</div>
+            </ng-container>
+            <ng-template #messageList>
+                <app-message *ngFor="let msg of message; index as i" [message]="msg" [index]="i">
+                </app-message>
+            </ng-template>
+        </div>
+
+        <div *ngIf="directMessageService.isDirectMessage" class="direct-message-container">
+            <ng-container *ngIf="isLoading; else messageList">
+                <div class="loader">Load ...</div>
+            </ng-container>
+            <ng-template #messageList>
+                <app-message *ngFor="let msg of directMessageService.allDirectMessages; index as i" [message]="msg"
+                    [index]="i">
+                </app-message>
+            </ng-template>
+        </div>
         }
     </div>
 
