--- a/src/app/main-content/chat/chat.component.html
+++ b/src/app/main-content/chat/chat.component.html
@@ -21,9 +21,9 @@
                     <h2>{{auth.currentChannelData.title}}</h2>
                 </div>
                 <p>{{ checkUserAdmin(auth.currentChannelData.admin)
-                    ? 'You have this channel ' + parseTime(auth.currentChannelData.createdAt) + ' created . '
-                    : auth.currentChannelData.adminName + ' hat diesen Channel ' +
-                    parseTime(auth.currentChannelData.createdAt) + ' erstellt.' }} Das ist der Anfang des Channels
+                    ? 'You created this channel  ' + parseTime(auth.currentChannelData.createdAt) + '.'
+                    : auth.currentChannelData.adminName + ' created this channel. ' +
+                    parseTime(auth.currentChannelData.createdAt) + ' created .' }} This is the beginning of the channel.
                     <span># {{auth.currentChannelData.title}}</span>
                 </p>
             </div>
